--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,10 +9,7 @@
 	"routes": [
 	  {
 		"src": "/(.*)",
-		"dest": "frontend/dist/$1"
+		"dest": "/frontend/dist/$1"
 	  }
-	],
-	"env": {
-	  "NODE_ENV": "production"
-	}
+	]
   }
