--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,13 +3,16 @@
 	"builds": [
 	  {
 		"src": "frontend/package.json",
-		"use": "@vercel/node"
+		"use": "@vercel/static-build",
+		"config": {
+		  "distDir": "dist"
+		}
 	  }
 	],
 	"routes": [
 	  {
 		"src": "/(.*)",
-		"dest": "/frontend/dist/$1"
+		"dest": "/index.html"
 	  }
 	]
   }
