--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
 	"version": 2,
 	"builds": [
 	  {
-		"src": "frontend/package.json",
+		"src": "package.json",
 		"use": "@vercel/static-build",
 		"config": {
 		  "distDir": "dist"
@@ -12,6 +12,10 @@
 	"routes": [
 	  {
 		"src": "/(.*)",
+		"dest": "/dist/$1"
+	  },
+	  {
+		"src": "/",
 		"dest": "/dist/index.html"
 	  }
 	]
