--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,11 +12,7 @@
 	"routes": [
 	  {
 		"src": "/(.*)",
-		"dest": "/dist/$1"
-	  },
-	  {
-		"src": "/",
-		"dest": "/dist/index.html"
+		"dest": "/index.html"
 	  }
 	]
   }
