--- a/.env
+++ b/.env
@@ -1,1 +1,17 @@
 
+# Informations de base de données
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=5910
+DB_NAME=PetGroomingDB
+
+# Port de l'application
+PORT=3000
+
+# Clés API (exemple)
+API_KEY=your_api_key_here
+
+JWT_SIGN_SECRET=your_super_secret_key
+
+# Variables spécifiques à l'environnement
+NODE_ENV=development
